--- a/src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/geometric-transformations.tex
@@ -208,7 +208,7 @@ The most common 3D-2D projection is \emph{perspective projection}, which account
     \label{eq:perspective-matrix}
 \end{equation}
 
-The perspective projection is the cornerstone of model-image registration. If a matrix can be created that mimics the fluoroscopic imaging setup in the clinic, then this offers a strong possibility of re-creating a virtual scene with the same geometry as the actual scene.
+The perspective projection is the cornerstone of model-image registration. If a matrix mimics the fluoroscopic projective geometry in the clinic, then this offers a strong possibility of re-creating a virtual scene with the same geometry as the actual scene.
 
 %%% Local Variables:
 %%% mode: latex
