--- a/src/1-Intro/1-1_computer-vision-primer/image-processing.tex
+++ b/src/1-Intro/1-1_computer-vision-primer/image-processing.tex
@@ -2,9 +2,9 @@ Digital image processing is a field of computer vision that deals with the manip
 
 \subsubsection{Filtering and Convolution}
 \label{sec:filtering-convolution}
-We have already seen how image formation yields a collection of 2D points, $\mathbf{x}_{pix}$. We can write the intensity values at each pixel location as a digital signal, $f(\mathbf{x}_{pix}) = f(i,j)$, where $(i,j)$ represent the pixel locations in the image, and the function returns the intensity value. We can then use standard methods of digital signal processing in order to extract meaningful information from images.
+We have already seen how image formation yields a collection of 2D points, $\mathbf{x}_{pix}$. We can write the intensity values at each pixel location as a digital signal, $f(\mathbf{x}_{pix}) = f(i,j)$, where $(i,j)$ represents the pixel locations in the image, and the function returns the intensity value. We can then use standard methods of digital signal processing in order to extract meaningful information from images.
 
-The most widely used filter is a linear filter \cite{szeliskiComputerVisionAlgorithms2022}, where the output is some linear operation on the neighboring pixels (Eq. \ref{eq:convolution}), also known as a \emph{convolution}. In a convolution, the kernel, $h$ is shifted along the input image, $f$, and the resultant image, $g$, is the dot product of those two matrices at that specific location.
+The most widely used filter is a linear filter \cite{szeliskiComputerVisionAlgorithms2022}, where the output is some linear operation on the neighboring pixels (\cref{eq:convolution}). This is known as a \emph{convolution}. In a convolution, the kernel, $h$, is shifted along the input image, $f$, and the resultant image, $g$, is the dot product of those two matrices at that specific location.
 
 \begin{equation}
     \begin{aligned}
@@ -16,7 +16,7 @@ The most widely used filter is a linear filter \cite{szeliskiComputerVisionAlgor
     \label{eq:convolution}
 \end{equation}
 
-The convolution operation is \emph{linear shift invariant}, which means that it obeys the superposition principle (Eq. \ref{eq:superposition}) and the shift invariance principle (Eq. \ref{eq:shift-invariance}). This is a powerful property, because it will behave the same everywhere on the input signal/image (e.g. an edge detector will detect an edge, no matter where the edge is on the input image)
+The convolution operation is \emph{linear shift invariant}, which means that it obeys the superposition principle (\cref{eq:superposition}) and the shift invariance principle (\cref{eq:shift-invariance}). This is a powerful property, because it will behave the same everywhere on the input signal/image (e.g. an edge detector will detect an edge, no matter where the edge is on the input image)
 
 \begin{equation}
     h *(f + g) = h*f + h*g
@@ -28,7 +28,7 @@ The convolution operation is \emph{linear shift invariant}, which means that it 
     \label{eq:shift-invariance}
 \end{equation}
 
-A common filter applied to images is the Gaussian kernel (Eq. \ref{eq:gaussian-kernal}). This kernel is shaped as a 2D discrete Gaussian, and has the effect of blurring an image and removing noise.
+A common filter applied to images is the Gaussian kernel (\cref{eq:gaussian-kernal}). This kernel is shaped as a 2D discrete Gaussian, and has the effect of blurring an image and removing noise.
 
 \begin{equation}
     \text{Gaussian filter}=\frac{1}{256}\begin{bmatrix}
@@ -41,7 +41,7 @@ A common filter applied to images is the Gaussian kernel (Eq. \ref{eq:gaussian-k
     \label{eq:gaussian-kernal}
 \end{equation}
 
-Another is the box kernel, which averages the value of the nearest K pixels (Eq. \ref{eq:box-filter}).
+Another is the box kernel, which averages the value of the nearest K pixels (\cref{eq:box-filter}).
 
 \begin{equation}
     \text{Box filter} = \frac{1}{K^{2}}\begin{bmatrix}
@@ -53,7 +53,7 @@ Another is the box kernel, which averages the value of the nearest K pixels (Eq.
     \label{eq:box-filter}
 \end{equation}
 
-Edge filters can also be created to detect vertical (Eq. \ref{eq:vert-edge-filter}), horizontal (Eq. \ref{eq:horiz-edge-filter}), or diagonal edges (Eq. \ref{eq:diag-edge-filter}). As each of the filters moves across the feature it is designed for, that region of the output will be more highly activated than other regions, extracting out the desired components. The orientation of each of these filters can be hand-selected to find desirable attributes in images.
+Edge filters can also be created to detect vertical (\cref{eq:vert-edge-filter}), horizontal (\cref{eq:horiz-edge-filter}), or diagonal edges (\cref{eq:diag-edge-filter}). As each of the filters moves across the feature it is designed for, that region of the output will be more highly activated than other regions, extracting out the desired components. The orientation of each of these filters can be hand-selected to find desirable attributes in images.
 
 \begin{equation}
     \text{vertical edge filter} = \begin{bmatrix}
@@ -103,7 +103,7 @@ Lastly, we can use a corner filter to find corners in images (\cref{eq:corner-fi
 Entire subfields of computer vision and image analysis are devoted to creating increasingly useful and complex filters, or collections of filters. These include steerable filters, which determine information occurring in arbitrary directions \cite{freemanSteerableFiltersLocal1992}, recursive filtering \cite{nielsenRegularizationScalespaceEdge1996}, and non-linear filtering \cite{tomasiBilateralFilteringGray1998}.
 
 \subsubsection{Edge Detection}
-Edge detection is a highly motivated sub-field of image processing in computer vision, due to the immense usefulness of algorithmically determining the edges in a given image. For a human operator, it can be rather easy to find edges of interest, but how much this be incorporated computationally? The first approach might be in viewing an image topologically, with regions of different colors and intensity represented by different ``heights''. Then, an edge simply becomes an area with a steep gradient (\cref{eq:img-grad}).
+Edge detection is a highly motivated sub-field of image processing in computer vision due to the immense usefulness of algorithmically determining the edges in a given image. For a human operator, it can be rather easy to find edges of interest, but how much this be incorporated computationally? The first approach might be in viewing an image topologically, with regions of different colors and intensity represented by different ``heights''. Then, an edge simply becomes an area with a steep gradient (\cref{eq:img-grad}).
 
 \begin{equation}
     \begin{aligned}
@@ -112,7 +112,7 @@ Edge detection is a highly motivated sub-field of image processing in computer v
     \label{eq:img-grad}
 \end{equation}
 
-Finding the direction of the steepest ascent/descent at any given location will give use the normal to the local edge at that point. However, the derivative operator will accentuate and amplify high frequencies in the image, causing noise to overpower the signal. Removing the high-frequency information (a low-pass filter) in the image results in gradient detection that is much more aligned with the salient edges of the image. The Gaussian kernel is a good option for an isotropic low-pass filter on a 2D signal (image) (\cref{eq:gauss-kernel-grad})
+Finding the direction of the steepest ascent/descent at any given location will give us the normal to the local edge at that point. However, the derivative operator will accentuate and amplify high frequencies in the image, causing noise to overpower the signal. Removing the high-frequency information (a low-pass filter) in the image results in gradient detection that is much more aligned with the salient edges of the image. The Gaussian kernel is a good option for an isotropic low-pass filter on a 2D signal (image) (\cref{eq:gauss-kernel-grad})
 
 \begin{equation}
     \begin{aligned}
@@ -125,12 +125,12 @@ Finding the direction of the steepest ascent/descent at any given location will 
 \end{equation}
 
 
-The ubiquitous edge detection algorithm was proposed by John Canny in 1986 \cite{cannyComputationalApproachEdge1986}, which utilizes a five-step process. First, a Gaussian kernel is applied as a low-pass filter (\cref{eq:gauss-kernel-grad}), second, directional filters are used to find the gradients in each direction of the image, third, a gradient magnitude threshold is applied to remove noise, fourth, a double threshold is applied to remove both strong and weak edges, and lastly, edges are determined from hysteresis. The prevailing limitation of this algorithm is the need to set kernel size and edge-intensity.
+The ubiquitous edge detection algorithm was proposed by John Canny in 1986 \cite{cannyComputationalApproachEdge1986}, and utilizes a five-step process. First, a Gaussian kernel is applied as a low-pass filter (\cref{eq:gauss-kernel-grad}). Second, directional filters are used to find the gradients in each direction of the image. Third, a gradient magnitude threshold is applied to remove noise. Fourth, a double threshold is applied to remove both strong and weak edges. Last, edges are determined from hysteresis. The prevailing limitation of this algorithm is the need to set kernel size and edge-intensity.
 
 \subsubsection{Binary Image Processing}
 \label{sec:binary-img-proc}
 
-A binary image is a digital image that consists only of black and white pixels. It is often used for labeling or masking an underlying image, where the values of 1 and 0 represent the presence or absence of a particular feature or object. Binary images are often used in computer vision and image processing applications because they can be easily processed and analyzed. They are also useful for storing and transmitting large amounts of data, as the use of only two values reduces the amount of information that needs to be stored and transmitted.
+A binary image is a digital image that consists only of black and white pixels. It is often used for labeling or masking an underlying image, where the values of 1 and 0 represent the presence or absence of a particular feature or object. Binary images are often used in computer vision and image processing applications due to low computational overhead and quick analysis. They are also useful for storing and transmitting large amounts of data, as the use of only two values reduces the amount of information that needs to be stored and transmitted.
 
 The primary form of processing on binary images is morphological, that is, changing the shape of the ``blob'' in order to extract useful information from it.
 
@@ -140,7 +140,7 @@ The primary form of processing on binary images is morphological, that is, chang
     \label{fig:binary-image-processing}
 \end{figure}
 
-Dilation and erosion are the two main operations that are used in model-image registration (\ref{eq:dilation-erosion}). These functions are each two-fold: first, a convolution operation is applied to the existing binary image, then a threshold is applied to the convolution output to determine if the central pixel is a zero or 1. If $f$ is the input image, $s$ is the convolution kernel of $1$s, and $c=f\otimes s$ is the number of $1$s in the convolution output, then dilation and erosion can be expressed in the following way.
+Dilation and erosion are the two main operations that are used in model-image registration (\ref{eq:dilation-erosion}). These functions are each two-fold: first, a convolution operation is applied to the existing binary image, then a threshold is applied to the convolution output to determine if the central pixel is a 0 or 1. If $f$ is the input image, $s$ is the convolution kernel of $1$s, and $c=f\otimes s$ is the number of $1$s in the convolution output, then dilation and erosion can be expressed in the following way.
 
 \begin{equation}
     \begin{aligned}
