--- a/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
+++ b/src/1-Intro/1-2_machine-learning/neural-network-structure.tex
@@ -4,8 +4,7 @@ Neural networks generally have the same constitutive elements, mixed and matched
 \subsubsection{Neural Network Building Blocks}
 Generally, neural networks are formed by collections of foundational units, which can generate increasingly complex architectures and yield incredible performance. However, it is always important to start with the fundamental ``atoms'' of the neural network.
 
-The most basic unit of a neural network is the perceptron (or neuron), which is composed of a summation of inputs multiplied by weights, a bias term, and a (typically non-linear) activation function (Fig. \ref{fig:neuron}, Eq. \ref{eq:neuron}). 
-
+The most basic unit of a neural network is the perceptron (or neuron), which is composed of a summation of inputs multiplied by weights, a bias term, and a (typically non-linear) activation function (\cref{fig:neuron}, \cref{eq:neuron}).
 \begin{figure}[h!]
     \begin{center}
         {\includegraphics[width=0.55\linewidth]{figs/background/png/neuron.png}}
@@ -37,7 +36,7 @@ Activation functions are a crucial component in neural networks as they allow fo
 \subsubsection{Fully Connected Network}
 The fully connected network, also known as the multi-layer perceptron, is a basic type of neural network that utilizes the neurons previously discussed as building blocks. Its schematic representation is a familiar image to many when considering neural networks. By stacking the summations and multiplications of each neuron, we can derive the equation for a single layer of a fully connected network, which is simply a matrix multiplication (\cref{eq:fcn}). In this equation, $W$ represents the collection of weights for each neuron, $a$ represents the input, $b$ represents the bias, and $\phi$ represents the activation function.
 
-One of the key strengths of this type of network is the utilization of non-linear activation functions. A well-chosen activation function can greatly impact the network's performance and ability to achieve specific tasks. For example, in a binary classification task, the sigmoid activation function can be used at the output layer, constraining the output between $0$ (false) and $1$ (true). The output can then represent the probability of the given input being classified as 'true'. The ReLU activation function is another popular choice, it is computationally efficient and often used in hidden layers of deep networks. Additionally, the hyperbolic tangent (tanh) activation function is used in the context of a model where data follows a Gaussian distribution. 
+One of the key strengths of this type of network is the utilization of non-linear activation functions. A well-chosen activation function can greatly impact the network's performance and ability to achieve specific tasks. For example, in a binary classification task, the sigmoid activation function can be used at the output layer, constraining the output between $0$ (false) and $1$ (true). The output can then represent the probability of the given input being classified as 'true'. The ReLU activation function is another popular choice because it is computationally efficient and often used in hidden layers of deep networks. Additionally, the hyperbolic tangent (tanh) activation function is used in the context of a model where data follows a Gaussian distribution.
 
 \begin{figure}[h!]
     \centering
@@ -62,7 +61,7 @@ One of the main limitations of fully-connected networks is exponential increase 
 
 \subsubsection{Convolutional Neural Networks}
 
-Alex Krizhevsky sparked renewed interest in deep learning in 2012 by utilizing a convolutional neural network to win the ImageNet challenge \cite{russakovskyImageNetLargeScale2015} by more than 10 points over second place.Since then, neural networks have found their way into many different computer vision tasks, including those in the medical field. The power of convolutional neural networks lay in their ability to autonomously extract latent features from images useful for many processing and analysis tasks. The medical field has used them to segment and classify different bones, structures, and pathologies from a wide array of imaging modalities (CT, x-ray, MRI, etc). In most cases, it can completely remove the need for human supervision in many repetitive image processing tasks.
+Alex Krizhevsky sparked renewed interest in deep learning in 2012 by utilizing a convolutional neural network to win the ImageNet challenge \cite{russakovskyImageNetLargeScale2015} by more than 10 points over second place. Since then, neural networks have found their way into many different computer vision tasks, including those in the medical field. The power of convolutional neural networks lay in their ability to autonomously extract latent features from images useful for many processing and analysis tasks. The medical field has used them to segment and classify different bones, structures, and pathologies from a wide array of imaging modalities (CT, x-ray, MRI, etc). In most cases, it can completely remove the need for human supervision in many repetitive image processing tasks.
 
 Convolutional neural networks (CNN) utilize the convolution operation (\cref{eq:convolution}) in order to both reduce the size and complexity of the network and capture spatial information present in images. In the same way that the matrix $W$ in the fully connected network is a learnable parameter in a FCN, the individual kernels are the learnable parameters in a convolution operation. In practice, with the correct cost function and optimization routine, this allows each of the kernels to learn the latent structure in the image and make connections between those structures. At a high level, these kernels often represent feature extractors for edges, lines, corners, curves, and other geometric primitives. However, as one traverses deeper into the network, the combinations of these features are often incomprehensible to a human (\cref{fig:conv-layers}).
 
@@ -83,6 +82,11 @@ Typically, these networks will downsample the image to capture the most salient 
   \end{figure}
 
 
-CNN architecture can be altered by changing the behavior and structure of the underlying kernels, namely size, stride, and shape. Stride controls the discrete steps the kernel takes as it is moving across the input image, and can be used to downsample more aggressively. An atrous convolution involves internally padding the convolution entries with zeros. This also has the effect of more aggressively downsizing an image and capturing a larger region around the center pixel.
+CNN architecture can be altered by changing the behavior and structure of the underlying kernels, namely size, stride, and shape. Stride controls the discrete steps the kernel takes as it is moving across the input image and can be used to downsample more aggressively. An atrous convolution involves internally padding the convolution entries with zeros. This also has the effect of more aggressively downsizing an image and capturing a larger region around the center pixel.
 
 A convolutional neural network can have an additional fully connected network appended to the output in order to learn a mapping that involves a linear combination of the extracted features from the convolution operations. This is often used when a CNN is applied to a classification task, where the total number of outputs of the final FCN is the number of classes.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% End:
