--- a/src/2-aims/aim4.tex
+++ b/src/2-aims/aim4.tex
@@ -5,6 +5,6 @@ First, we are going to measure movements spanning the entire spectrum of imaging
 
 \subsection{Statistical Analysis}
 
-One of the most recently developments in machine learning is Transformers. These new foundational networks utilize attention blocks in place of recurrent neural networks or convolutional neural networks in order to process time-series data \cite{vaswaniAttentionAllYou2017}. One of the most interesting areas where these networks are highly performant is translation; both between languages, as well as image-to-text \cite{dosovitskiyImageWorth16x162021}. Key to the idea of translation is the notion of the ``essence'' of an ``idea'' (in the Platonic form) having multiple different actual representation. Specifically, there is an underlying meaning to a sentence or image that can be represented by words in another language. So, using this paradigm, is there an underlying ``idea'' present in a parametrized kinematic measurement that might be represented in either pathology, outcome or other measurement?
+One of the most recently developments in machine learning is Transformers. These new foundational networks utilize attention blocks in place of recurrent neural networks or convolutional neural networks in order to process time-series data \cite{vaswaniAttentionAllYou2017}. One of the most interesting areas where these networks are highly performant is translation; both between languages, as well as image-to-text \cite{dosovitskiyImageWorth16x162021}. Key to the idea of translation is the notion of the ``essence'' of an ``idea'' (in the Platonic form) having multiple real-world instantiations. Specifically, there is an underlying meaning to a sentence or image that can be represented by words in another language. So, using this paradigm, is there an underlying ``idea'' present in a parametrized kinematic measurement that might be represented in either pathology, outcome or other measurement?
 
 This aim seeks to answer the following questions: (1) can a transformer-based architecture be used to ``translate'' between parametrized representations of kinematic motion into another movement by the same patient, and can statistical salience between movements be inferred from an exploration into these networks? (2) Can these kinematic examinations be used to statistically infer post-operative outcome? (3) Can the total number of measurements necessary to generate an accurate post-operative prediction be minimized by clustering different movements?
