--- a/src/2-aims/aim5.tex
+++ b/src/2-aims/aim5.tex
@@ -1,4 +1,4 @@
-Parallel to clinical adoption of the Joint Track Machine Learning framework, we hope to expand the scope of use to research personnel studying joint kinematics around the world. Unfortunately, the current system is a system containing an exorbitant amount of legacy C++ code that requires extensive time and understanding to make changes. As such, the number of possibilities and ideas that can be tried an implemented remains in the hands of those students in the Gary J. Miller PhD Orthopaedic Biomechanics Laboratory.
+Parallel to clinical adoption of the Joint Track Machine Learning framework, we hope to expand the scope of use to research personnel studying joint kinematics around the world. Unfortunately, the current system is a system containing an exorbitant amount of legacy C++ code that requires extensive time and understanding to make changes. As such, the number of possibilities and ideas that can be tried and implemented remains in the hands of those students in the Gary J. Miller Ph.D. Orthopaedic Biomechanics Laboratory.
 
 Thankfully, with the widespread adoption of Python as an easy-to-use language for researchers, and the ability to wrap back-end C++ subroutines with Python functions, it is possible to extend development of new and novel model-image registration pipelines to those without much software development expertise.
 
