added extra fluff into aim 1

--- a/src/2-aims/aim1.tex
+++ b/src/2-aims/aim1.tex
@@ -1,1 +1,6 @@
-The primary aim of this dissertation is to test the feasibility of the fully autonomous pipeline, and validate the results against known gold-standard kinematics measurements to test reproducibility and accuracy. These measures are discussed and quantified in the attached paper (\cref{sec:jtml}).
+The primary aim of this dissertation is to test the feasibility of the fully autonomous pipeline, and validate the results against known gold-standard kinematics measurements to test reproducibility and accuracy. These measures are discussed and quantified in the attached paper (\cref{sec:jtml}) The work presented in this paper won the HAP Paul Award for Best Paper at the International Society for Technology in Arthroplasty's 2022 Annual Meeting, and is currently under review for publication in the Journal of Arthroplasty.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../Jensen-Lit-Review"
+%%% End:
