--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/single-plane-limitations.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/single-plane-limitations.tex
@@ -1,1 +1,5 @@
-Despite a fully autonomous solution for measuring total knee arthroplasty kinematics, there are some fundamental limitations when using monocular vision to determine the three dimensional position and orientation of an object.
+Despite a fully autonomous solution for measuring total knee arthroplasty kinematics, there are some fundamental limitations when using monocular vision to determine the three dimensional position and orientation of an object. \cref{sec:aim2} discusses methods for overcoming these limitations. So far, incorporating digital ligaments into the cost function has been used to a great deal of success.
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../../Jensen-Lit-Review"
+%%% End:
