--- a/src/2-aims/2-aims.tex
+++ b/src/2-aims/2-aims.tex
@@ -17,7 +17,7 @@
 \label{sec:aim4}
 \input{src/2-aims/aim4.tex}
 
-\section{Aim 5: Joint Track Auto Toolkit: An Open Source Framework for Model-Image Registraion}
+\section{Aim 5: Joint Track Auto Toolkit: An Open Source Framework for Model-Image Registration}
 \label{sec:aim5}
 \input{src/2-aims/aim5.tex}
 
