--- a/proposal/jensen-pres.tex
+++ b/proposal/jensen-pres.tex
@@ -1,4 +1,4 @@
-% Created 2023-02-24 Fri 14:23
+% Created 2023-02-28 Tue 12:32
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
 \usepackage[utf8]{inputenc}
@@ -40,8 +40,8 @@
 
 
 \section{Introduction}
-\label{sec:org25ae222}
-\begin{frame}[label={sec:org3b187f0}]{Two columns}
+\label{sec:org4ab3566}
+\begin{frame}[label={sec:org02e632a}]{Two columns}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{itemize}
@@ -58,11 +58,39 @@
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgd961477}]{Another frame here}
+\begin{frame}[label={sec:orgfda485a}]{Another frame here}
 Typing some things here that relate to the research.
 
 \begin{equation*}
   T = F(s,\theta)
 \end{equation*}
+\end{frame}
+
+\section{Motivation}
+\label{sec:orgca6f5e1}
+\begin{frame}[label={sec:org3ac28ad}]{The Problem}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{itemize}
+\item Joints manifest pain during dynamic activity.
+\item 20\% of patients receiving TKA are dissatisfied.
+\begin{itemize}
+\item Instability, pain, unnatural\autocites{bakerRolePainFunction2007}[][]{bournePatientSatisfactionTotal2010}[][]{scottPredictingDissatisfactionFollowing2010}.
+\end{itemize}
+\item No reliable method of clinically assessing and quantifying joint dynamics.
+\end{itemize}
+\end{column}
+\begin{column}{0.4\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/andrew/repo/lit-review/figures/raster/hrnet-human-pose.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+\section{References}
+\label{sec:orgd33c319}
+\begin{frame}[label={sec:orgbf2c20e},fragile, allowframebreaks, label=]{References}
+\AtNextBibliography{\tiny}
+\printbibliography
 \end{frame}
 \end{document}
