--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -3641,6 +3641,18 @@
   file = {/home/andrew/Zotero/storage/5X4Y4NEZ/Pinto et al. - 2018 - Iris Flower Species Identification Using Machine L.pdf}
 }
 
+@book{platoCollectedDialoguesPlato1961,
+  title = {The Collected Dialogues of {{Plato}}},
+  author = {{Plato}},
+  editor = {Hamilton, Edith and Cairns, Huntington},
+  year = {1961},
+  month = oct,
+  series = {Bollingen Series (General)},
+  publisher = {{Princeton University Press}},
+  address = {{Princeton, NJ}},
+  langid = {english}
+}
+
 @article{polceMachineLearningPredicts2021,
   title = {Machine {{Learning Predicts Femoral}} and {{Tibial Implant Size Mismatch}} for {{Total Knee Arthroplasty}}},
   author = {Polce, Evan M. and Kunze, Kyle N. and Paul, Katlynn M. and Levine, Brett R.},
